# HPC_Specialization

UPC/MG/UPC/: Makefile  Makefile.edison  Makefile.gn  Makefile.gupc  Makefile.icc  Makefile.shared  Makefile.static  NOTES.txt  batch_test  bench.c  bench_upc.trans.c  box.c  box.h  defines.h  max_norm_upc.trans.c  mg.c  mg.h  operators.avx.c  operators.bgq.c  operators.c.upc  operators.h  operators.naive.c  operators.native.c  operators.omptask.c  operators.reference.c  operators.sse.c  thor.mak  thor2.mak  timer.bgq.c  timer.h  timer.x86.c
UPC/upc_runtime/docs/: Makefile.am  Makefile.in
UPC/upc_runtime/harness/: Makefile.am  Makefile.in  README  compiler.spec.in  cray-upc.spec  cupc-upcr.spec.in  cupc2c.spec.in  gupc-upcr.spec.in  gupc.spec  harness.pl  hp-upc.spec  ibm-upc.spec  runjobs.pl  tune_max_compile_jobs.in  upc-wrapper
UPC/upc_runtime/profile/: Makefile.am  gasp.h  gasp_upc.h
UPC/upc_runtime/totalview/: Bootstrap  Makefile.am  Makefile.in  configure  configure.in
UPC/upc_runtime/upcr_geninclude/: Makefile.am  Makefile.in  byteswap.h.in  ctype.h.in  genfile.pl  limits.h.in  math.h.in  stdbool.h.in  stdint.h.in  stdio.h.in  stdlib.h.in  string.h.in  upcr_atomic.subst  upcr_atomic_defs.h.in
berkeley_upc-2.22.0/: Bootstrap  CTestBottom.mak.in  ChangeLog  Makefile.am  README  README.developers  acinclude.m4  aclocal.m4  gcc_as_cc.pl  multiconf.conf.in  multiconf.pl  upcc.conf.in  upcc.pl  upcc_multi.pl  upcr.h  upcr.mak.in  upcr_coll_init.c  upcr_collective.c  upcr_config.h.in  upcr_ctuple.pl  upcr_err.h  upcr_extern.c  upcr_fca_ops.c  upcr_globfiles.c  upcr_gupc.c  upcr_gupc.h  upcr_io.h  upcr_memcpy.c  upcr_profile.h  upcr_shaccess.h  upcr_sptr.h  upcr_syshdrs.h  upcr_totalview.c  upcr_translator_tld.h  upcr_util.c  upcr_util.h  upcrun.conf.in  upcrun.pl  version.git
berkeley_upc-2.22.0/config-aux/: mkinstalldirs
berkeley_upc-2.22.0/contrib/: Makefile.in  cupc2c-install.sh  tcsh-completions
berkeley_upc-2.22.0/contrib/upcc_CGI/: Makefile.in  cgitest.html  foo.tar  upcc.cgi
berkeley_upc-2.22.0/contrib/upcdecl/: Makefile.in  cdeclgram.txt  mygram.txt  upcdecl.extraman  upcdecl_TRP.pl  upctests.txt
berkeley_upc-2.22.0/detect-upc/: scanner.l  upcppp.pl
berkeley_upc-2.22.0/docs/: README.CrayXT  README.crosscompile
berkeley_upc-2.22.0/docs/html/: index.html
berkeley_upc-2.22.0/harness/: checkfail.in  cupc.spec  harness.in  harness_util.pl  sgi-upc.spec  tune_max_compile_jobs.pl
berkeley_upc-2.22.0/harness/contrib/: .gitignore  harness-configure.ac  harness-times.pl  platform_info.sh  qfeed-cobalt.pl  qfeed-tacc.pl
berkeley_upc-2.22.0/harness/sysconfs/: bdev  bigben  blueprint  cheetah  crow  davinci-shmem  edison  eiger  franklin  harmonic  hive  hopper  jacdev  jacquard  mir  mpi-interactive  mu  n2001  n2001_udp  ocracoke  pcp-i-ssh  pople  rtc  sicortex-fd  smp-interactive-no-pthreads  stampede  sysconf  thor  trestles  veas-cobalt
berkeley_upc-2.22.0/man/: Makefile.am  Makefile.in
berkeley_upc-2.22.0/profile/: Makefile.in  type-mangling-grammar.txt
berkeley_upc-2.22.0/profile/dump/: gasp.c  gaspu.upc
berkeley_upc-2.22.0/totalview/: aclocal.m4  unBootstrap
berkeley_upc-2.22.0/totalview/assistant/: Makefile.in  bupc_assistant.h
berkeley_upc-2.22.0/totalview/tcl/: demangle.tcl  replace_BLN.tcl  s2s_prologue.tvd  s2s_setup.tvd
berkeley_upc-2.22.0/umalloc/: Makefile.am  Makefile.in  ufree.c  umalloc.c  umalloc.h
berkeley_upc-2.22.0/upc-examples/: hello.upc  lock_table.upc
berkeley_upc-2.22.0/upc-examples/AHPCRC-benchmarks/: RUN_ME  harness.conf  pingpongMPI.c  pingpongUPC.c
berkeley_upc-2.22.0/upc-examples/RandomAccess/: Makefile  RandomAccess_UPC.h  harness.conf
berkeley_upc-2.22.0/upc-examples/cpi/: harness.conf
berkeley_upc-2.22.0/upc-examples/guppie/: Makefile
berkeley_upc-2.22.0/upc-examples/laplace/: Makefile  harness.conf
berkeley_upc-2.22.0/upc-examples/mcop/: Makefile  harness.conf
berkeley_upc-2.22.0/upc-examples/mg/: harness.conf  mg.upc  npb-C.uph  wtime.upc
berkeley_upc-2.22.0/upc-examples/pearls/: blk_inprod.upc  inprod.upc  upc_primes1.upc  upcfish.upc  z_order1.upc
berkeley_upc-2.22.0/upc-examples/psearch/: Makefile  harness.conf  sha1.upc
berkeley_upc-2.22.0/upc-examples/upc-tutorial/: ex_1.upc  ex_2.c  ex_4.upc
berkeley_upc-2.22.0/upc-examples/upc_collectivev/: bupc_collectivev_test.upc
berkeley_upc-2.22.0/upc-tests/: Makefile
berkeley_upc-2.22.0/upc-tests/UPC-Atomic-RefImp/: Makefile  README  rupc_types.h  upc_atomic.upc
berkeley_upc-2.22.0/upc-tests/UPC-Coll-RefImp/: Makefile  harness.conf  try_all.c  try_prefix.c  upc_all_exchange.c  upc_all_gather.c  upc_all_permute.c  upc_collective.h
berkeley_upc-2.22.0/upc-tests/benchmarks/: Edmiston.upc  bupc_memperf.upc  bupc_ptradd.upc  gasp_test.upc  harness.conf  lockperf.upc  memalign.upc  memcpy.upc  memcpy_async.upc  natural_ring_mtu.upc  strided-comm.upc  touchperf.upc  upc_io_test.upc
berkeley_upc-2.22.0/upc-tests/bugzilla/: Makefile  all_free_test.upc  badflush.upc  barrier_coll_race.upc  barrier_mismatch2.upc  bug1010.upc  bug1022.upc  bug1023.upc  bug1033.upc  bug1036.upc  bug1040.upc  bug105.upc  bug1080.upc  bug1094.upc  bug1126.upc  bug1141.upc  bug116.upc  bug1221.upc  bug1222b.upc  bug1223a.c  bug1229.upc  bug1262c.upc  bug1270.upc  bug1315b.upc  bug1352.upc  bug1354.upc  bug137d.upc  bug1435.upc  bug145.upc  bug1464.c  bug147.upc  bug1531.upc  bug1559.upc  bug156.upc  bug1578.upc  bug159.upc  bug164.upc  bug1657.upc  bug1665a.upc  bug1667.upc  (+195 more)
berkeley_upc-2.22.0/upcr_extinclude/: Makefile.am  Makefile.in  bupc_extensions.h  pupc.h  upc_castable_bits.h  upc_collective.h  upc_io_bits.h  upc_nb.h
berkeley_upc-2.22.0/upcr_geninclude/: README  alloca.h.in  bupc_atomics.h.in  fenv.h.in  inttypes.h.in  iso646.h.in  stdarg.h.in  stddef.h.in  time.h.in
berkeley_upc-2.22.0/upcr_geninclude2/: Makefile.am  Makefile.in  stdlib.h.in
berkeley_upc-2.22.0/upcr_postinclude/: Makefile.am  Makefile.in
berkeley_upc-2.22.0/upcr_preinclude/: Makefile.am  bupc_collectivev.h  pupc.h  upc_bits.h  upc_nb.h  upc_strict.h  upc_tick.h
(+21346 files in other folders)
